--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,10 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Sign Up</title>
 </head>
+{%extends 'logs/base.html'%}
 <body>
-$END$
+{%block content%}
+    <div>
+        {%if form.errors%}
+        <p class="error-msgs register">Invalid inputs</p>
+
+        {%endif%}
+    </div>
+<p class="page-title" id="register-page">Register for an Account</p>
+<section class="form-container register">
+    <form method="post" action="{%url 'users:register'%}">
+        {%csrf_token%}
+        {{form.as_p}}
+        <button name="submit">Sign Up</button>
+        <input type="hidden" name="next" value="{%url 'logs:index'%}"/>
+    </form>
+</section>
+
+{%endblock content%}
 </body>
 </html>
